Improve request structs
